<!--
  Copyright (c) 2018 Bevilacqua Joey

  Licensed under the GNU GPLv3 license

  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<resources>
    <string name="app_name">Diab</string>
    <string name="app_shortcut_add_glucose">Add glucose</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="saved">Saved</string>
    <string name="remove">Remove</string>

    <string name="fragment_overview">Overview</string>
    <string name="fragment_glucose">Glucose</string>

    <!-- Time -->
    <string name="time_today">Today</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_last_x">Last %1$s</string>
    <string name="time_x_y_ago">%1$d %2$s ago</string>
    <string name="time_day_month_short_format">dd MMM</string>
    <string name="time_pick">Select another date\u2026</string>

    <!-- Time zone -->
    <string name="time_extra">Extra</string>
    <string name="time_morning">Morning</string>
    <string name="time_late_morning">Late morning</string>
    <string name="time_lunch">Lunch</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_dinner">Dinner</string>
    <string name="time_night">Night</string>

    <!-- Insulin Editor -->
    <string name="insulin_editor_add">Add insulin</string>
    <string name="insulin_editor_edit">Edit insulin</string>
    <string name="insulin_editor_name">Name</string>
    <string name="insulin_item_add">Add</string>
    <string name="insulin_item_basal">Basal</string>
    <string name="insulin_item_half_units">Half units</string>

    <!-- Glucose Editor -->
    <string name="glucose_editor_time_dialog">Select the time</string>
    <string name="glucose_editor_insulin_add">Add insulin</string>
    <string name="glucose_editor_basal_add">Add basal</string>
    <string name="glucose_editor_insulin_value">Quantity</string>
    <string name="glucose_editor_save_error">Check the values again</string>

    <!-- Glucose suggestions -->
    <string name="glucose_report_base">During the last week, at this time of the day your glucose has been %1$s (average %2$d).</string>
    <string name="glucose_type_high">high</string>
    <string name="glucose_type_medium">fine</string>
    <string name="glucose_type_low">low</string>
    <string name="insulin_suggestion_loading">Loading\u2026</string>
    <string name="insulin_suggestion_warning_low">Too low</string>
    <string name="insulin_suggestion_warning_high">Too high</string>
    <string name="insulin_suggestion_value">Suggested insulin: %1$.1f</string>
    <string name="insulin_suggestion_error">Unable to suggest right now</string>
    <string name="insulin_suggestion_applied">Suggestion applied</string>

    <!-- Insulin list -->
    <string name="insulin_name">Insulins</string>

    <!-- Export database -->
    <string name="export_ask_title">Export data</string>
    <string name="export_ask_message">Do you want to export the glucose data for machine learning to the internal memory?</string>
    <string name="export_ask_positive">Export</string>
    <string name="export_ask_permission_message">Storage access is needed to export the data to the internal memory. Please grant it.</string>
    <string name="export_ask_permission_positive">Ask again</string>
    <string name="export_ask_auth_title">Diab ∙ Export</string>
    <string name="export_ask_auth_message">Authenticate to export your data</string>
    <string name="export_failed_auth">Auth failed, data export has been canceled</string>
    <string name="export_notification_title">Export glucose data</string>
    <string name="export_notification_channel">Export operations</string>
    <string name="export_completed_success">The data has been exported to the internal memory</string>
    <string name="export_completed_failure">Unable to export the data to the internal memory</string>

    <!-- Google Fit -->
    <string name="fit_name">Fit integration</string>
    <string name="fit_status_prompt"><b>Google Fit</b> lets you backup your fitness and heath data from multiple apps and devices.\nBy connecting Google Fit and Diab, you\'ll be able to backup your <b>glucose data</b>.</string>
    <string name="fit_status_connected">Diab is connected to <b>Google Fit</b>. Your <b>glucose</b> will be synced.</string>
    <string name="fit_button_connect">Connect to Google Fit</string>
    <string name="fit_login_error">Operation failed. Check the internet connection and retry</string>
    <string name="fit_privacy">Privacy and data management</string>
    <string name="fit_privacy_delete">Delete all data</string>
    <string name="fit_privacy_disconnect">Disconnect from Fit</string>
    <string name="fit_delete_confirm_title">Delete Fit data</string>
    <string name="fit_delete_confirm_message">You\'re about to remove your glucose history from Google Fit. This operation cannot be undone.\nDo you want to proceed?</string>
    <string name="fit_delete_confim_positive">Remove</string>
    <string name="fit_delete_success">The data has been removed from Fit</string>
    <string name="fit_delete_failure">Unable to remove data from Fit. Try later</string>
    <string name="fit_disconnect_confim_title">Disconnect from Fit</string>
    <string name="fit_disconnect_confim_message">You\'re about to disconnect from Google Fit. The app will no longer sync new glucose data (the existing values will be retained on Google Fit).\nDo you want to proceed?</string>
    <string name="fit_disconnect_confim_positive">Disconnect</string>
    <string name="fit_disconnect_success">Disconnected from Fit</string>

    <!-- OnBoarding banners -->
    <string name="banner_negative">Dismiss</string>
    <string name="banner_insulin_add">Register your insulins to save them along with your glucose values</string>
    <string name="banner_insulin_positive">Register insulins</string>
    <string name="banner_fit_integration">Connect Diab to your Google Fit to backup your glucose values automatically</string>
    <string name="banner_fit_positive">Learn more</string>

    <!-- Settings -->
    <string name="settings_name">Settings</string>
    <string name="settings_glucose_thresholds_category">Glucose thresholds</string>
    <string name="settings_glucose_thresholds_high">High threshold</string>
    <string name="settings_glucose_thresholds_low">Low threshold</string>
    <string name="settings_plugin_category_title">Insulin suggestions</string>
    <string name="settings_plugin_manage_title">Suggestions plugin</string>
    <string name="settings_plugin_manage_summary_new">Install a plugin\u2026</string>
    <string name="settings_plugin_manage_summary_installed">Plugin installed.\nLast updated: %1$s</string>
    <string name="settings_plugin_installing">Installing\u2026</string>
    <string name="settings_plugin_remove">Uninstall plugin</string>
    <string name="settings_plugin_remove_confirmation">The insulin suggestions are going to be disabled until a new plugin is installed.\nThis action cannot be undone, do you want to proceed?</string>
    <string name="settings_plugin_remove_confirmation_positive">Remove</string>
    <string name="settings_ui_theme_title">Style</string>
    <string name="settings_ui_theme_system">Auto (system)</string>
    <string name="settings_ui_theme_light">Light</string>
    <string name="settings_ui_theme_dark">Dark</string>

</resources>
