<!--
  Copyright (c) 2018 Bevilacqua Joey

  Licensed under the GNU GPLv3 license

  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_insulin"
        android:icon="@drawable/ic_menu_insulin"
        android:title="@string/insulin_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/export_ask_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_fit"
        android:title="@string/fit_name"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />
</menu>
