<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2019 Bevilacqua Joey
  
  Licensed under the GNU GPLv3 license
  
  The text of the license can be found in the LICENSE file
  or at https://www.gnu.org/licenses/gpl.txt
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/glucose_editor_time_dialog"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/edit_dialog_date_today"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/time_today"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_dialog_date_yesterday"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/time_yesterday"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_dialog_date_pick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/time_pick"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp" />

</LinearLayout>
