<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/fit_header_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_fit_header"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:text="@string/fit_status_connected" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fit_connect_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fit_button_connect"
            android:textAllCaps="false"
            android:visibility="gone"
            app:cornerRadius="@dimen/app_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fit_header_text"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/item_header_divider"
            app:layout_constraintTop_toBottomOf="@id/fit_connect_button" />

        <TextView
            android:id="@+id/fit_privacy_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:text="@string/fit_privacy"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/fit_connect_button"
            tools:ignore="RtlSymmetry" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/fit_disconnect_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fit_privacy_disconnect"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/app_radius"
            app:layout_constraintEnd_toStartOf="@+id/fit_delete_all_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fit_privacy_category"
            tools:enabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fit_delete_all_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fit_privacy_delete"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/app_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fit_disconnect_button"
            app:layout_constraintTop_toBottomOf="@id/fit_privacy_category"
            tools:enabled="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
